# mapserver-server

./: .env  .gitignore  Cargo.toml  README  README.md
migrations/2020-09-18-184613_create_map/: up.sql
migrations/2020-09-18-205659_create_points/: up.sql
src/: main.rs  models.rs
src/db/: actions.rs  mod.rs
