[package]
name = "mapserver"
version = "0.0.1"
authors = ["David Duran i Rosich <david.duran.rosich@gmail.com>"]
edition = "2018"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
# Logger
env_logger = "0.7"

# Webserver
actix-web = "3"

# Utils
failure = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# DB
libsqlite3-sys = { version = ">=0.8, <0.13", features = ["bundled"] }
diesel = { version = "1.4", features = ["sqlite", "r2d2"] }
dotenv = "0.15"
r2d2 = "0.8"
